@@ -1010,7 +1010,8 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * (bug 4258) When installing under IIS, $wgArticlePath = "$wgScript?title=$1" should be set
 * (bug 4510) Correct Barnes & Noble bookstore URLs
 * (bug 4504) Use site language for namespace name resolution
-
+* Installer fixes from HEAD backported; now uses a more sensible method of establishing which
+  mySQL user to use, which clears up bug 921 et al. Minor changes to installer.
 
 === Caveats ===
 
